--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.1.0",
-    "hono": "^4.6.14"
+    "hono": "^4.6.14",
+    "nanoid": "^5.0.9",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bun": "latest",
