--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@prisma/client": "^6.1.0",
     "hono": "^4.6.14",
+    "hono-sessions": "^0.7.0",
     "nanoid": "^5.0.9",
     "zod": "^3.24.1"
   },
